[tool.poetry]
name = "user-location"
version = "0.1.0"
description = ""
authors = ["Svyatoslav Bogatov <s.bogatov@litebox.ru>"]
readme = "README.md"
packages = [{include = "user_location"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.100.1"
alembic = "^1.11.1"
pydantic = "^2.1.1"
asyncpg = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
