[tool.poetry]
name = "user-location"
version = "0.1.0"
description = ""
authors = ["Svyatoslav Bogatov <s.bogatov@litebox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.100.1"
alembic = "^1.11.1"
pydantic = "^2.1.1"
asyncpg = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
pydantic-settings = "^2.0.2"
httpx = "^0.25.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
sqlalchemy-utils = "^0.41.1"
asyncer = "^0.0.2"
pytest-ordering = "^0.6"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
